syntax = "proto3";

package v3;

option go_package = "github.com/dendrascience/dendra-data-api/release/go/v3";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";


message AggregateValue {
  double minimum = 1;
  double maximum = 2;
  double summation = 3;
}

// An individual time series aggregation in a datastream
message Aggregate {
  // The aggregate's timestamp in agnostic local time or UTC
  google.protobuf.Timestamp ts = 1;

  // RESERVED 2

  uint32 count = 3;

  // RESERVED 4
  // RESERVED 5

  // A scalar value set
  optional AggregateValue v = 6;

  // RESERVED 7

  // The scalar value set converted to a unit of measure
  optional AggregateValue uv = 8;

  // RESERVED 9
  // RESERVED 10
  // RESERVED 11

  // Data quality information
  DataQuality q = 12;
}

// enum BucketWidth {
//   BUCKET_WIDTH_UNSPECIFIED = 0;
//   BUCKET_WIDTH_YEAR = 1;
//   BUCKET_WIDTH_MONTH = 2;
//   BUCKET_WIDTH_DAY = 3;
//   BUCKET_WIDTH_HOUR = 4;
//   BUCKET_WIDTH_30_MINUTE = 5;
// }

message AnnotationActions {
  google.protobuf.Struct attrib = 1;
  string evaluate = 2;
  bool exclude = 3;
  repeated string flag = 4;
}

message ConvertArgs {
  string from_unit = 1;
  string to_unit = 2;
  string library = 3;
}

// An individual time series observation in a datastream
message Datapoint {
  // The datapoint's timestamp in UTC
  google.protobuf.Timestamp t = 1;

  // An offset in seconds between the time zone and UTC
  sint32 o = 2;

  // The timestamp in agnostic local time (offset applied)
  google.protobuf.Timestamp lt = 3;

  // A custom data object
  google.protobuf.Struct d = 4;

  // An array of custom data objects
  repeated google.protobuf.Struct da = 5;

  // A scalar value
  optional double v = 6;

  // An array of scalar values
  repeated double va = 7;

  // The scalar value converted to a unit of measure
  optional double uv = 8;

  // RESERVED 9

  // A GeoJSON point, polygon or multi-polygon
  // TODO: Define message type for this
  google.protobuf.Struct g = 10;

  // A GeoJSON position (i.e. longitude, latitude, altitude)
  repeated double gc = 11;

  // Data quality information
  DataQuality q = 12;

  // RESERVED 13
  // RESERVED 14
  // RESERVED 15

  // Extended information about the time
  google.protobuf.Struct ti = 16;

  // An end time object for observations that span a period of time
  EndTime et = 17;
}

message DataQuality {
  google.protobuf.Struct attrib = 1;
  repeated string flag = 2;
  repeated string annotation_ids = 3;
}

// User-defined service configuration for fetching datapoints
message DatapointsConfigInstance {
  optional google.protobuf.Timestamp begins_at = 1;
  optional google.protobuf.Timestamp ends_before = 2;

  google.protobuf.Struct params = 3;

  string connection = 4;
  string path = 5;
  optional uint32 ref = 6;

  // RESERVED 7
  // RESERVED 8
  // RESERVED 9

  AnnotationActions actions = 10;
  repeated string annotation_ids = 11;
}

message DatapointsQuery {
  bool sort_asc = 1;
  optional uint32 limit = 2;

  optional google.protobuf.Timestamp lt_time = 3;
  optional google.protobuf.Timestamp gt_time = 4;
  bool lt_equal = 5;
  bool gt_equal = 6;
  bool is_local = 7;

  optional double lat = 8;
  optional double lon = 9;
}

// A continuous series of datapoints indexed in time order.
message Datastream {
  string _id = 1;
  string version_id = 2;
  string name = 3;
  string derivation_method = 4;
  repeated string derived_from_datastream_ids = 5;

  // RESERVED 6
  // RESERVED 7
  // RESERVED 8
  // RESERVED 9

  // TODO: Need uom_id or unit_tag for from_unit
  // TODO: Update metadata service

  repeated DatapointsConfigInstance datapoints_config = 10;
  repeated DatapointsConfigInstance datapoints_config_built = 11;
  repeated DatapointsConfigInstance datapoints_config_refd = 12;

  StationLookup station_lookup = 13;
  google.protobuf.Struct terms = 14;
  TermsInfo terms_info = 15;
}

// An end time object for observations that span a period of time
message EndTime {
  // The datapoint's timestamp in UTC
  google.protobuf.Timestamp t = 1;

  // An offset in seconds between the time zone and UTC
  sint32 o = 2;
}

message StationLookup {
  sint32 utc_offset = 1;
}

message TermsInfo {
  repeated string class_keys = 1;
  repeated string class_tags = 2;
  string unit_tag = 3;
}

message TransformArgs {
  string expression = 1;
}

// A quantity used as a standard of measurement.
message Uom {
  string _id = 1;
  string version_id = 2;
  string som_id = 3;
  repeated string convertible_to_uom_ids = 4;
  repeated string unit_tags = 5;

  google.protobuf.Struct library_config = 6;
}
